fixed layout problems

--- a/templates/css/app.css
+++ b/templates/css/app.css
@@ -1,108 +1,78 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    color: white;
-    font-family: Yantramanav,sans-serif;
+*{ 
+	margin: 0px;
+	padding: 0px;
+	color: white;
 }
-html {
-    background-color:black;
+
+#sidebar {
+	/*Strictly Necessary */
+	position:fixed; 
+	height: 100%;
+	width:20%;
+	margin: 0px;  
+
+  /*Aesthetics*/
+  background: #363535; 
 }
+
+
+#rightSideWrapper {
+	/*Strictly Necessary */
+	width:80%; 
+	float: right;
+
+	/*Aesthetics*/
+	background: black;	
+}
+
+#rightSideWrapper > header > h2 {
+	float: left;
+	display: block;
+}
+
 header {
-    position: relative;
-    left: 15%;
-    background-color: #363535;
-    text-align: center;
-    vertical-align: middle;
-    width: 100%;  
-    height: 70px;
-}
-#image-title{
-    background-color: rebeccapurple;
-    color: #ef476f;
-    font-size: 20px;
-    display: inline-block;
-    margin: 0;
-    position: relative;
-    top: 50%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-}
-.nav-button {
-    display: inline-block;
-    position: absolute;
-    vertical-align: middle;
-    padding: 0px;    
-    margin: 0px;
-    left: 85%;
-    height: 100px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	/*Strictly Necessary */
+	position: fixed;
+	width: 80%;	
+	height: 70px; /*Adjust the hight to your purposes*/
+	
+	/*Aesthetics*/
+	background: pink;
 }
 
-#previous {
-    left: 74%;
+.ContentBox{
+	margin-top: 70px; /*The height of the   header*/
+	display:flex;
+	flex-flow: row wrap;
+} 
 
-}
-#next {
-    left: 79%;
-}
+canvas {
+	/*Aesthetics*/
+	 background: red; 
+	 height: 600px;
 
-#toolbar {
-    position: absolute;
-    text-align: center;
-    top: 0px;
-    padding: 0px;
-    height: 100%;
-    width: 20%;
-    background-color: #363535;
+	  /*Strictly Necessary */
+	  order: 1;
+	  flex: 0 1 100%; 
 }
 
-.title {
-    background-color: #03aa8c;
-    border-top-right-radius: 0px;
-}
-.title > h3{
-    font-size: 34px;
-    padding: 50px;
-    margin-bottom: 25px;
-}
-.StackSpan {
-    color: #03aa8c;
-    font-size: 23px;
+
+
+.move-button {
+	
 }
 
-#undo {
-    position: relative;
-    left: -20%;
+#next-button {
+}
+#previous-button{
 }
 
-#redo {
-    position: relative;
-    left: 20%;
-}
-
-#labels {
-    margin-top: 60px;
-    height: 500px;
-    overflow: hidden;
-    overflow-y: scroll;
-}
-
-.label{
-    margin: 20px;
-    padding: 10px;
-    list-style: none;
-    background-color: rebeccapurple;
-    border-radius: 30px;
-}
-
-#ExportDataset{
-    position: absolute;
-    right: 0px;
-    bottom: 0px;
-    background-color: #03aa8c;
-    border-color:rgba(0,0,0,0.0);;
-    width: 100%;
-    height: 60px;
-    font-size: 20px;
-
+.arrows{
+	position: fixed;
+	right: 0px;
+	float: right;
 }
